# spotify-log

./: .editorconfig  .gitignore
git-commits-to-bq/: .env.example  .gitignore  Cargo.toml  README.md
git-commits-to-bq/src/: converter.rs  main.rs
git-commits-to-bq/src/bq_client/: defs.rs  mod.rs
git-commits-to-bq/src/github_client/: api_response_defs.rs  defs.rs  mod.rs  util.rs
git-commits-to-bq/src/spotify_log/: converter.rs  defs.rs  mod.rs  parser.rs  util.rs
