[package]
name = "git-commits-to-bq"
version = "0.1.0"
authors = ["shio-yaamaa <shio.yama520@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
github-rs = "0.7"
lazy_static = "1.4.0"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
